# EA-Trader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
data/historical/: AUDJPY_D1.csv  AUDJPY_H1.csv  AUDJPY_H4.csv  AUDJPY_M15.csv  AUDJPY_M5.csv  AUDUSD_D1.csv  AUDUSD_H1.csv  AUDUSD_H4.csv  AUDUSD_M15.csv  AUDUSD_M5.csv  EURUSD_D1.csv  EURUSD_H1.csv  EURUSD_H4.csv  EURUSD_M15.csv  EURUSD_M5.csv  GBPJPY_D1.csv  GBPJPY_H1.csv  GBPJPY_H4.csv  GBPJPY_M15.csv  GBPJPY_M5.csv  GBPUSD_D1.csv  GBPUSD_H1.csv  GBPUSD_H4.csv  GBPUSD_M15.csv  GBPUSD_M5.csv  USDJPY_D1.csv  USDJPY_H1.csv  USDJPY_H4.csv  USDJPY_M15.csv  USDJPY_M5.csv  XAUUSD_D1.csv  XAUUSD_H1.csv  XAUUSD_H4.csv  XAUUSD_M15.csv  XAUUSD_M5.csv
mql5/: ApexReceiver.mq5
python/: __init__.py
python/backtest/: data_loader.py  engine.py  metrics.py  walk_forward.py
python/core/: data_engine.py  indicators.py  mt5_connector.py  regime.py  risk.py  sizing.py  zmq_bridge.py
python/strategies/: base.py  trend_pullback.py
python/utils/: logger.py  news_guard.py  notifier.py
scripts/: backtest.py  fetch_history.py  sweep_gbpusd.py  sweep_xauusd.py
tests/: test_backtest_engine.py  test_regime.py  test_risk.py  test_sizing.py  test_trend_pullback.py  test_zmq_bridge.py
